# windows_thunks

./: .gitignore  README.md
.github/workflows/: ci.yml
examples/free_test_by_boost_test/: CMakeLists.txt  readme.md  thunk_test.cpp
examples/windows_thunk_test/: windows_thunk_test.sln
examples/windows_thunk_test/windows_thunk_test/: resource.h  windows_thunk_test.cpp  windows_thunk_test.h  windows_thunk_test.vcxproj  windows_thunk_test.vcxproj.filters  windows_thunk_testDlg.cpp  windows_thunk_testDlg.h  windowsthunktest.aps  windowsthunktest.rc
examples/windows_thunk_test/windows_thunk_test/res/: windowsthunktest.rc2
include/: thunk_hook.hpp  thunks.hpp
test/: Jamfile.v2  thunk_test.cpp
